--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "antd": "^2.5.0",
+    "axios": "^0.15.3",
     "mobx": "^2.6.3",
     "mobx-react": "^4.0.3",
     "react": "^15.4.1",
